--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
-    <meta name="viewport" content="width=720, user-scalable=no" />
+    <!-- <meta name="viewport" content="width=720, user-scalable=no" /> -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale = 1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
